--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,38 @@ figcaption {
   text-shadow: 0 2px 3px #000;
 }
 
+.shadow{
+  box-shadow: 0 3px 10px #333;
+  
+}
 
-
+.border-right{
+    border-right: 1px dotted #ccc;
+    padding-right: 30px;
+  
+}
 /*////////// BACKGROUNDS //////////*/
 
+.white-wood{
+  background: url(../images/white-wood.jpg)no-repeat center top;
+  background-size: cover;
+}
 
+.ligth-fade{
+  background: rgb(252,255,244); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(252,255,244,1) 1%, rgba(223,229,215,1) 37%, rgba(179,190,173,1) 95%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(252,255,244,1) 1%,rgba(223,229,215,1) 37%,rgba(179,190,173,1) 95%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(252,255,244,1) 1%,rgba(223,229,215,1) 37%,rgba(179,190,173,1) 95%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#b3bead',GradientType=0 ); /* IE6-9 */
+  }
+
+.medium-fade{
+  background: rgb(138,182,107); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(138,182,107,1) 20%, rgba(138,182,107,1) 27%, rgba(138,182,107,1) 35%, rgba(201,222,150,1) 80%, rgba(201,222,150,1) 84%, rgba(201,222,150,1) 88%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(138,182,107,1) 20%,rgba(138,182,107,1) 27%,rgba(138,182,107,1) 35%,rgba(201,222,150,1) 80%,rgba(201,222,150,1) 84%,rgba(201,222,150,1) 88%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(138,182,107,1) 20%,rgba(138,182,107,1) 27%,rgba(138,182,107,1) 35%,rgba(201,222,150,1) 80%,rgba(201,222,150,1) 84%,rgba(201,222,150,1) 88%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8ab66b', endColorstr='#c9de96',GradientType=0 ); /* IE6-9 */
+  }
 
 /*/////// MEDIA ////////*/
 
@@ -72,17 +99,17 @@ img, video, audio, iframe, table, form {
 .col-1 {
   float: left;
   width: 32%;
-  background: #ccc;
+  
 }
 
 .col-2 {
   float: left;
   width: 66%;
-  background: #ccc;
+  
 }
 
 .col-3 {
-  background: #ccc;
+  
 }
 
 [class*="col-"] {
@@ -112,10 +139,43 @@ img, video, audio, iframe, table, form {
 
 /*////////// HEADER //////////*/
 
-
+header{
+  margin: 0 0 30px;
+}
 
 /*////////// NAVBAR //////////*/
+ 
+ #navbar{
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   z-index: 2;
+   border-bottom:1px solid #ccc;
+   text-align: center;
+ }
 
+#navbar nav{
+  border-left:1px solid #ccc;
+}
+
+#navbar nav a{
+  display: inline-block;
+  width: 16.6666667%;
+  margin: 0;
+  padding: 22px 0;
+  text-transform: uppercase;
+  color: black;
+  text-align: center;
+  border-right:1px solid #ccc;
+  text-decoration: none;
+  font:1em "trebuchet MS", Arial, sans-serif;
+}
+
+#navbar nav a.selected{
+  background: #333;
+  color:white;
+}
 
 
 /*////////// LOGO //////////*/
@@ -135,6 +195,7 @@ img, video, audio, iframe, table, form {
 section {
   padding: 30px;
   margin-bottom: 20px;
+  background: white;
 
 }
 
