--- a/css/style.css
+++ b/css/style.css
@@ -179,11 +179,11 @@ header{
  
  #navbar nav a:hover{
    color:white;
-   background: rgb(224,243,250); /* Old browsers */
-   background: -moz-linear-gradient(top, rgba(224,243,250,1) 0%, rgba(184,226,246,1) 64%, rgba(182,223,253,1) 100%); /* FF3.6-15 */
-   background: -webkit-linear-gradient(top, rgba(224,243,250,1) 0%,rgba(184,226,246,1) 64%,rgba(182,223,253,1) 100%); /* Chrome10-25,Safari5.1-6 */
-   background: linear-gradient(to bottom, rgba(224,243,250,1) 0%,rgba(184,226,246,1) 64%,rgba(182,223,253,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e0f3fa', endColorstr='#b6dffd',GradientType=0 ); /* IE6-9 */
+   background: rgb(125,126,125); /* Old browsers */
+   background: -moz-linear-gradient(top, rgba(125,126,125,1) 0%, rgba(14,14,14,1) 36%); /* FF3.6-15 */
+   background: -webkit-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 36%); /* Chrome10-25,Safari5.1-6 */
+   background: linear-gradient(to bottom, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 36%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
  }
 
 /*////////// LOGO //////////*/
